// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loading screen 1`] = `
<Styled(ViewNB)>
  <Styled(Text)>
    Loading...
  </Styled(Text)>
</Styled(ViewNB)>
`;

exports[`renders screen placeholder content 1`] = `
<Styled(ViewNB)>
  <Styled(Text)>
    Placeholder for Localization Screen of 
    feup
  </Styled(Text)>
</Styled(ViewNB)>
`;
